[tool.poetry]
name = "crossrefapi"
version = "1.6.0"
description = "Library that implements the endpoints of the Crossref API"
authors = ["Fabio Batalha <fabio.batalha@erudit.org>"]
readme = "README.rst"
packages = [
  { include = "crossref",  from="."}
]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.0"
pytest = "^8.2.2"
pre-commit = "^3.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
